# m5stack-tab5-terminal

./: .env.example  .gitignore  Cargo.toml  README.md
backend/: Cargo.toml  README.md
backend/src/: admin.html  app.rs  config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
backend/src/providers/: longbridge.rs  mock.rs  mod.rs
backend/tests/: api.rs
firmware/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.cpp  idf_component.yml  network.cpp  network.hpp  quote_model.cpp  quote_model.hpp  ui.cpp  ui.hpp
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  index.css  types.ts  useQuoteStream.ts
frontend/src/test/: setup.ts
