[package]
name = "tab5-stock-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["ws"] }
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
longbridge = "4.4.1"
rust_decimal = "1.39.0"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = "0.3.54"
tokio = { version = "1.48.0", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.7.0", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }

[dev-dependencies]
http-body-util = "0.1.3"
tokio-tungstenite = "0.30.0"
tower = { version = "0.5.2", features = ["util"] }
